[UPDATED] Adicionado uma comunicação simples através de json

--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -14,14 +14,11 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-if (NOT MSVC)
+if (MSVC)
+    add_compile_options(/std:c++20 /MP)
+else()
     # globally set -fno-strict-aliasing, needed due to using reinterpret_cast
-      add_compile_options(-fno-strict-aliasing -finput-charset=UTF-8 -fexec-charset=UTF-8 -fno-char8_t)
-endif()
-
-if(MSVC)
-    add_compile_options(/std:c++20 /MP /utf-8 /Zc:char8_t-)
-    add_link_options(/ignore:4099)
+    add_compile_options(-fno-strict-aliasing)
 endif()
 
 if (WIN32)
@@ -59,4 +56,10 @@ add_executable(${PROJECT_NAME} ${JD_SOURCES})
 link_thirdparty(${PROJECT_NAME})
 if(WIN32)
     target_link_libraries(${PROJECT_NAME} PRIVATE ws2_32)
+endif()
+
+if (MSVC)
+    target_compile_options(${PROJECT_NAME} PRIVATE /utf-8)
+else()
+    target_compile_options(${PROJECT_NAME} PRIVATE -finput-charset=UTF-8 -fexec-charset=UTF-8)
 endif()
