[UPDATED] Adicionado uma separação entre as classes/ids e other_datas e uma forma de abrir todos os links colapsaveis antes de fazer o parse do site

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,14 +16,16 @@ requires-python = ">=3.8"
 dependencies = [
     "Scrapy>=2.11.0",
     "Twisted>=22.10.0",
-    "PyInstaller>=6.15.0"
+    "PyInstaller>=6.15.0",
+    "scrapy-playwright>=0.0.44",
+    "Playwright>=1.15"
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.3.1",
     "pytest-asyncio>=0.21.0",
-    "pytest-twisted>=1.14.0",
+    "pytest-twisted>=1.14.0"
 ]
 
 [tool.setuptools]
