[UPDATED] Adicionado um exemplo simples de como vai funcionar o código

--- a/Server/batch_config.json
+++ b/Server/batch_config.json
@@ -54,8 +54,12 @@
       "twisted"
     ],
     "exclude_modules": [
-        "twisted.trial",
-        "hypothesis"
+      "twisted.trial",
+      "hypothesis"
+    ],
+    "add_data": [
+      "Source/Config.json;.",
+      "Source/Spider;Spider"
     ]
   }
 }
