--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "Server"
-version = "0.0.0"
-description = "Web crawler com Scrapy e comunicação via sockets"
+version = "0.1.0"
+description = "Web crawler com Playwright puro e parser com lxml/parsel"
 authors = [
     {name = "MayronDAV", email = "vasconcelosmayron@gmail.com"}
 ]
@@ -14,18 +14,15 @@ license = {file = "LICENSE"}
 requires-python = ">=3.8"
 
 dependencies = [
-    "Scrapy>=2.11.0",
-    "Twisted>=22.10.0",
+    "playwright>=1.15",
+    "lxml>=5.2.0",
+    "parsel>=1.9.0",
     "PyInstaller>=6.15.0",
-    "scrapy-playwright>=0.0.44",
-    "Playwright>=1.15"
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.3.1",
-    "pytest-asyncio>=0.21.0",
-    "pytest-twisted>=1.14.0"
 ]
 
 [tool.setuptools]
